# smoothflight

./: pyproject.toml
src/smoothflight/: __main__.py  ship.py  world.py
