[project]
name = "smoothflight"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya Tagunov",email = "tagunil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "smoothflight", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
